--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -36,46 +36,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(5, 5)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False, False, False, False, False]\n",
+      "[False, False, False, False, False]\n",
+      "[False, False, False, False, False]\n",
+      "[False, False, False, False, False]\n",
+      "[False, False, False, False, False]\n"
+     ]
     }
    ],
    "source": [
-    "N, M"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 1, 1],\n",
-       " [0, 0, 0, 0, 0],\n",
-       " [0, 1, 0, 0, 0],\n",
-       " [0, 1, 0, 0, 0]]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "relations"
+    "dy = (0, 1, 0, -1)\n",
+    "dx = (1, 0, -1, 0)\n",
+    "chk = [[False] * N for _ in range(N)]\n",
+    "for l in chk:\n",
+    "    print(l)"
    ]
   }
  ],
