--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -58,6 +58,23 @@
     "for l in chk:\n",
     "    print(l)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_valid_coord(y, x):\n",
+    "    return 0 <= y < N and 0 <= x < N"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
