--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -71,10 +71,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (3702597237.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [14]\u001b[1;36m\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "def bfs(start_y, start_x, end_y, end_x):\n",
+    "    q = deque() \n",
+    "    q.append((start_y, start_x))\n",
+    "    while q:\n",
+    "        y, x = q.popleft()\n",
+    "        chk[y][x] = True\n",
+    "           "
+   ]
   }
  ],
  "metadata": {
