--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -36,31 +36,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[False, False, False, False, False]\n",
-      "[False, False, False, False, False]\n",
-      "[False, False, False, False, False]\n",
-      "[False, False, False, False, False]\n",
-      "[False, False, False, False, False]\n"
-     ]
-    }
-   ],
-   "source": [
-    "dy = (0, 1, 0, -1)\n",
-    "dx = (1, 0, -1, 0)\n",
-    "chk = [[False] * N for _ in range(N)]\n",
-    "for l in chk:\n",
-    "    print(l)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
@@ -71,15 +46,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "expected an indented block (3702597237.py, line 3)",
+     "evalue": "expected an indented block (3612636321.py, line 17)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [14]\u001b[1;36m\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+      "\u001b[1;36m  Input \u001b[1;32mIn [17]\u001b[1;36m\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
@@ -87,13 +62,29 @@
     "from collections import deque\n",
     "\n",
     "def bfs(start_y, start_x, end_y, end_x):\n",
-    "    q = deque() \n",
-    "    q.append((start_y, start_x))\n",
+    "    chk = [[False] * N for _ in range(N)]\n",
+    "    chk[start_y][0] = True    \n",
+    "    \n",
+    "    dq = deque() \n",
+    "    dq.append((start_y, start_x, 1))\n",
     "    while q:\n",
     "        y, x = q.popleft()\n",
-    "        chk[y][x] = True\n",
+    "        if x == end_x:\n",
+    "            return d\n",
+    "        nd = d + 1\n",
+    "        \n",
+    "        for k in range(N-1):\n",
+    "            if relations[k][0] == 1:\n",
+    "                \n",
     "           "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
