--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -20,71 +20,115 @@
    "source": [
     "import sys\n",
     "\n",
+    "# creating an adjacency matrix\n",
     "input = open(\"data/boj_1389.txt\", \"r\").readline\n",
     "N, M = map(int, input().split())\n",
-    "relations = [[0] * N for _ in range(N)]\n",
+    "relations_matrix = [[0] * N for _ in range(N)]\n",
     "#input = sys.stdin.readline\n",
     "\n",
     "for _ in range(M):\n",
     "    start, end = map(int, input().split())\n",
-    "    relations[start-1][end-1] = 1\n",
-    "    relations[end-1][start-1] = 1\n",
+    "    relations_matrix[start-1][end-1] = 1\n",
+    "    relations_matrix[end-1][start-1] = 1\n",
     "    \n",
-    "for l in relations:\n",
+    "for l in relations_matrix:\n",
     "    print(l)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def is_valid_coord(y, x):\n",
-    "    return 0 <= y < N and 0 <= x < N"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (3612636321.py, line 17)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [17]\u001b[1;36m\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: [(0, 2), (0, 3)], 1: [(1, 2)], 2: [(2, 0), (2, 1), (2, 3)], 3: [(3, 0), (3, 2), (3, 4)], 4: [(4, 3)]}\n",
+      "\n",
+      "0 : [(0, 2), (0, 3)]\n",
+      "1 : [(1, 2)]\n",
+      "2 : [(2, 0), (2, 1), (2, 3)]\n",
+      "3 : [(3, 0), (3, 2), (3, 4)]\n",
+      "4 : [(4, 3)]\n"
      ]
     }
    ],
    "source": [
-    "from collections import deque\n",
+    "friends_dict = {}\n",
     "\n",
-    "def bfs(start_y, start_x, end_y, end_x):\n",
-    "    chk = [[False] * N for _ in range(N)]\n",
-    "    chk[start_y][0] = True    \n",
+    "for i in range(N):\n",
+    "    friends_list =  []\n",
+    "    for j in range(N):\n",
+    "        if relations_matrix[i][j] == 1:\n",
+    "            friends_list.append((i, j))\n",
+    "    friends_dict[i] = friends_list\n",
     "    \n",
-    "    dq = deque() \n",
-    "    dq.append((start_y, start_x, 1))\n",
-    "    while q:\n",
-    "        y, x = q.popleft()\n",
-    "        if x == end_x:\n",
-    "            return d\n",
-    "        nd = d + 1\n",
-    "        \n",
-    "        for k in range(N-1):\n",
-    "            if relations[k][0] == 1:\n",
-    "                \n",
-    "           "
+    "print(friends_dict)\n",
+    "print()\n",
+    "\n",
+    "for k, v in friends_dict.items():\n",
+    "    print(f\"{k} : {v}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 2), (0, 3), (1, 2), (2, 0), (2, 1), (2, 3), (3, 0), (3, 2), (3, 4), (4, 3)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "links = []\n",
+    "\n",
+    "for i in range(N):    \n",
+    "    for j in range(N):\n",
+    "        if relations_matrix[i][j] == 1:\n",
+    "            links.append((i, j))\n",
+    "            \n",
+    "print(links)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3]\n",
+      "[2]\n",
+      "[0, 3, 1]\n",
+      "[0, 4, 2]\n",
+      "[3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# creating adjacency list\n",
+    "import sys\n",
+    "\n",
+    "input = open(\"data/boj_1389.txt\", \"r\").readline\n",
+    "N, M = map(int, input().split())\n",
+    "relations_list = [[] for _ in range(N)]\n",
+    "#input = sys.stdin.readline\n",
+    "\n",
+    "for _ in range(M):\n",
+    "    start, end = map(int, input().split())\n",
+    "    relations_list[start-1].append(end-1)\n",
+    "    relations_list[end-1].append(start-1)\n",
+    "    \n",
+    "for l in relations_list:\n",
+    "    print(l)"
+   ]
   }
  ],
  "metadata": {
