More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -129,6 +129,32 @@
     "for l in relations_list:\n",
     "    print(l)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[False, False, False, False, False],\n",
+       " [False, False, False, False, False],\n",
+       " [False, False, False, False, False],\n",
+       " [False, False, False, False, False],\n",
+       " [False, False, False, False, False]]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Try just for \"0\"\n",
+    "chk = [[False] * N for _ in range(N)]\n",
+    "chk"
+   ]
   }
  ],
  "metadata": {
