More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -155,6 +155,46 @@
     "chk = [[False] * N for _ in range(N)]\n",
     "chk"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 1, 1, 0],\n",
+       " [0, 0, 1, 0, 0],\n",
+       " [1, 1, 0, 1, 0],\n",
+       " [1, 0, 1, 0, 1],\n",
+       " [0, 0, 0, 1, 0]]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "relations_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_paths(start, end):\n",
+    "    cnt = 0\n",
+    "    for i in range(N):\n",
+    "        if end in relations_list[start]:\n",
+    "            cnt += 1\n",
+    "        else:\n",
+    "            cnt += 1\n",
+    "            for j in range"
+   ]
   }
  ],
  "metadata": {
