More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -188,12 +188,17 @@
    "source": [
     "def count_paths(start, end):\n",
     "    cnt = 0\n",
+    "    current = start\n",
+    "    \n",
+    "    if end  in relations_list[current]:\n",
+    "        chk[current][end] = chk[end][current] = True\n",
+    "        cnt += 1\n",
+    "        return cnt\n",
+    "    \n",
     "    for i in range(N):\n",
-    "        if end in relations_list[start]:\n",
-    "            cnt += 1\n",
-    "        else:\n",
-    "            cnt += 1\n",
-    "            for j in range"
+    "        cnt += 1\n",
+    "        for j in range(len(relations_list[current])):\n",
+    "                "
    ]
   }
  ],
