--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -182,6 +182,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3]\n",
+      "[2]\n",
+      "[0, 3, 1]\n",
+      "[0, 4, 2]\n",
+      "[3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for l in relations_list:\n",
+    "    print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -198,6 +220,7 @@
     "    for i in range(N):\n",
     "        cnt += 1\n",
     "        for j in range(len(relations_list[current])):\n",
+    "            \n",
     "                "
    ]
   }
