More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -217,11 +217,14 @@
     "        cnt += 1\n",
     "        return cnt\n",
     "    \n",
-    "    for i in range(N):\n",
-    "        cnt += 1\n",
+    "    for i in range(N):        \n",
     "        for j in range(len(relations_list[current])):\n",
+    "            idx = relations_list[i].index(j)\n",
+    "            chk[current][idx] = chk[idx][current] = True\n",
+    "            cnt += 1\n",
     "            \n",
-    "                "
+    "            current = idx\n",
+    "            count_paths(current, end)                          "
    ]
   }
  ],
