--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        " [False, False, False, False, False]]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,19 +212,65 @@
     "    cnt = 0\n",
     "    current = start\n",
     "    \n",
-    "    if end  in relations_list[current]:\n",
+    "    if end  in relations_list[current] and not chk[current][end] and chk[end][current]:\n",
     "        chk[current][end] = chk[end][current] = True\n",
     "        cnt += 1\n",
     "        return cnt\n",
     "    \n",
     "    for i in range(N):        \n",
     "        for j in range(len(relations_list[current])):\n",
-    "            idx = relations_list[i].index(j)\n",
+    "            idx = relations_list[i][j]\n",
     "            chk[current][idx] = chk[idx][current] = True\n",
     "            cnt += 1\n",
     "            \n",
     "            current = idx\n",
     "            count_paths(current, end)                          "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "count_paths(0, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "relations_list[0][0]"
    ]
   }
  ],
