More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        " [False, False, False, False, False]]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        " [0, 0, 0, 1, 0]]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,24 +212,54 @@
     "    cnt = 0\n",
     "    current = start\n",
     "    \n",
-    "    if end  in relations_list[current] and not chk[current][end] and chk[end][current]:\n",
+    "    if end  in relations_list[current]:\n",
     "        chk[current][end] = chk[end][current] = True\n",
     "        cnt += 1\n",
-    "        return cnt\n",
-    "    \n",
-    "    for i in range(N):        \n",
-    "        for j in range(len(relations_list[current])):\n",
-    "            idx = relations_list[i][j]\n",
-    "            chk[current][idx] = chk[idx][current] = True\n",
-    "            cnt += 1\n",
-    "            \n",
-    "            current = idx\n",
-    "            count_paths(current, end)                          "
+    "        return cnt    \n",
+    "          \n",
+    "    for i in range(len(relations_list[current])):\n",
+    "        idx = relations_list[current][i]\n",
+    "        chk[current][idx] = chk[idx][current] = True\n",
+    "        cnt += 1\n",
+    "        \n",
+    "        current = idx\n",
+    "        count_paths(current, end)                                 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_paths(start, end):\n",
+    "    cnt = 0\n",
+    "    current = start\n",
+    "    \n",
+    "    if end  in relations_list[current]:\n",
+    "        chk[current][end] = chk[end][current] = True\n",
+    "        cnt += 1\n",
+    "        return cnt    \n",
+    "          \n",
+    "    for i in range(len(relations_list[current])):\n",
+    "        idx = relations_list[current][i]\n",
+    "        chk[current][idx] = chk[idx][current] = True\n",
+    "        cnt += 1\n",
+    "        \n",
+    "        current = idx\n",
+    "        count_paths(current, end)\n",
+    "        \n",
+    "    for c in relations_list[current]:\n",
+    "        chk[current][c] = chk[c][current] = True\n",
+    "        cnt += 1\n",
+    "        \n",
+    "        current = c\n",
+    "                                  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
