More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,68 +239,60 @@
     "    if end  in relations_list[current]:\n",
     "        chk[current][end] = chk[end][current] = True\n",
     "        cnt += 1\n",
-    "        return cnt    \n",
-    "          \n",
-    "    for i in range(len(relations_list[current])):\n",
-    "        idx = relations_list[current][i]\n",
-    "        chk[current][idx] = chk[idx][current] = True\n",
-    "        cnt += 1\n",
-    "        \n",
-    "        current = idx\n",
-    "        count_paths(current, end)\n",
-    "        \n",
+    "        return cnt         \n",
+    "\n",
+    "    cnt_list = []\n",
     "    for c in relations_list[current]:\n",
     "        chk[current][c] = chk[c][current] = True\n",
     "        cnt += 1\n",
     "        \n",
-    "        current = c\n",
+    "        if end in relations_list[c]:\n",
+    "            chk[c][end] = chk[end][c] = True\n",
+    "            cnt += 1\n",
+    "        cnt_list.append(cnt)\n",
+    "    cnt = min(cnt_list)\n",
     "                                  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel."
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
-   "source": [
-    "count_paths(0, 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "3"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "relations_list[0][0]"
+    "count_paths(0, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cnt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1389.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m cnt\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'cnt' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "cnt"
    ]
   }
  ],
