More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,28 +250,29 @@
     "            chk[c][end] = chk[end][c] = True\n",
     "            cnt += 1\n",
     "        cnt_list.append(cnt)\n",
-    "    cnt = min(cnt_list)\n",
+    "    min_cnt = min(cnt_list)\n",
+    "    return min_cnt\n",
     "                                  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "2"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "count_paths(0, 4)"
+    "count_paths(0, 1)"
    ]
   },
   {
