--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,6 +243,7 @@
     "\n",
     "    cnt_list = []\n",
     "    for c in relations_list[current]:\n",
+    "        print(c)\n",
     "        chk[current][c] = chk[c][current] = True\n",
     "        cnt += 1\n",
     "        \n",
@@ -257,22 +258,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "1"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "count_paths(0, 1)"
+    "count_paths(0, 4)"
    ]
   },
   {
