More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
     "\n",
     "    cnt_list = []\n",
     "    for c in relations_list[current]:\n",
-    "        print(c)\n",
+    "        \n",
     "        chk[current][c] = chk[c][current] = True\n",
     "        cnt += 1\n",
     "        \n",
@@ -251,6 +251,8 @@
     "            chk[c][end] = chk[end][c] = True\n",
     "            cnt += 1\n",
     "        cnt_list.append(cnt)\n",
+    "        print(f\"current : {current}, c : {c}, cnt : {cnt}\")\n",
+    "        \n",
     "    min_cnt = min(cnt_list)\n",
     "    return min_cnt\n",
     "                                  "
@@ -258,16 +260,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "1"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
