More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,9 +241,9 @@
     "        cnt += 1\n",
     "        return cnt         \n",
     "\n",
-    "    cnt_list = []\n",
+    "    cnt_list = []    \n",
     "    for c in relations_list[current]:\n",
-    "        \n",
+    "        cnt = 0\n",
     "        chk[current][c] = chk[c][current] = True\n",
     "        cnt += 1\n",
     "        \n",
@@ -260,15 +260,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "3\n"
+      "current : 0, c : 2, cnt : 1\n",
+      "current : 0, c : 3, cnt : 3\n"
      ]
     },
     {
@@ -277,7 +277,7 @@
        "1"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
