More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3]\n",
+      "[2]\n",
+      "[0, 3, 1]\n",
+      "[0, 4, 2]\n",
+      "[3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for l in relations_list:\n",
+    "    print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +290,7 @@
      "output_type": "stream",
      "text": [
       "current : 0, c : 2, cnt : 1\n",
-      "current : 0, c : 3, cnt : 3\n"
+      "current : 0, c : 3, cnt : 2\n"
      ]
     },
     {
@@ -277,34 +299,13 @@
        "1"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "count_paths(0, 4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'cnt' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1389.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m cnt\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'cnt' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "cnt"
    ]
   }
  ],
