More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -250,6 +250,9 @@
     "        if end in relations_list[c]:\n",
     "            chk[c][end] = chk[end][c] = True\n",
     "            cnt += 1\n",
+    "        else:\n",
+    "            continue\n",
+    "        \n",
     "        cnt_list.append(cnt)\n",
     "        print(f\"current : {current}, c : {c}, cnt : {cnt}\")\n",
     "        \n",
