More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
     "    for c in relations_list[current]:\n",
     "        cnt = 0\n",
     "        chk[current][c] = chk[c][current] = True\n",
-    "        cnt += 1\n",
+    "        cnt += 1        \n",
     "        \n",
     "        if end in relations_list[c]:\n",
     "            chk[c][end] = chk[end][c] = True\n",
@@ -253,7 +253,8 @@
     "        else:\n",
     "            continue\n",
     "        \n",
-    "        cnt_list.append(cnt)\n",
+    "        if chk[c][end]:\n",
+    "            cnt_list.append(cnt)\n",
     "        print(f\"current : {current}, c : {c}, cnt : {cnt}\")\n",
     "        \n",
     "    min_cnt = min(cnt_list)\n",
@@ -285,30 +286,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "current : 0, c : 2, cnt : 1\n",
-      "current : 0, c : 3, cnt : 2\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "1"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "count_paths(0, 4)"
+    "count_paths(0, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current : 1, c : 2, cnt : 2\n",
+      "current : 4, c : 3, cnt : 2\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum = 0\n",
+    "for i in range(N):\n",
+    "    if i == 0:\n",
+    "        continue    \n",
+    "    sum += count_paths(i, 0)\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current : 0, c : 2, cnt : 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_paths(0, 1)"
    ]
   }
  ],
