--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
     "        \n",
     "        if chk[c][end]:\n",
     "            cnt_list.append(cnt)\n",
-    "        print(f\"current : {current}, c : {c}, cnt : {cnt}\")\n",
+    "        #print(f\"current : {current}, c : {c}, cnt : {cnt}\")\n",
     "        \n",
     "    min_cnt = min(cnt_list)\n",
     "    return min_cnt\n",
@@ -286,35 +286,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "count_paths(0, 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current : 1, c : 2, cnt : 2\n",
-      "current : 4, c : 3, cnt : 2\n",
+      "current : 0, c : 2, cnt : 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_paths(0, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current : 0, c : 2, cnt : 2\n",
+      "current : 0, c : 3, cnt : 2\n",
       "6\n"
      ]
     }
@@ -324,8 +331,47 @@
     "for i in range(N):\n",
     "    if i == 0:\n",
     "        continue    \n",
-    "    sum += count_paths(i, 0)\n",
+    "    sum += count_paths(0, i)\n",
     "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current : 1, c : 2, cnt : 2\n",
+      "current : 4, c : 3, cnt : 2\n",
+      "6\n",
+      "current : 1, c : 2, cnt : 2\n",
+      "current : 3, c : 2, cnt : 2\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "min() arg is an empty sequence",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1389.ipynb Cell 13\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X20sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mif\u001b[39;00m j \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X20sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m         \u001b[39mcontinue\u001b[39;00m    \n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X20sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39msum\u001b[39m \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m count_paths(j, i)\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X20sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39msum\u001b[39m)\n",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1389.ipynb Cell 13\u001b[0m in \u001b[0;36mcount_paths\u001b[1;34m(start, end)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X20sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m         cnt_list\u001b[39m.\u001b[39mappend(cnt)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X20sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcurrent : \u001b[39m\u001b[39m{\u001b[39;00mcurrent\u001b[39m}\u001b[39;00m\u001b[39m, c : \u001b[39m\u001b[39m{\u001b[39;00mc\u001b[39m}\u001b[39;00m\u001b[39m, cnt : \u001b[39m\u001b[39m{\u001b[39;00mcnt\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X20sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m min_cnt \u001b[39m=\u001b[39m \u001b[39mmin\u001b[39;49m(cnt_list)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X20sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m \u001b[39mreturn\u001b[39;00m min_cnt\n",
+      "\u001b[1;31mValueError\u001b[0m: min() arg is an empty sequence"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(N):\n",
+    "    sum = 0\n",
+    "    for j in range(N):\n",
+    "        if j == 0:\n",
+    "            continue    \n",
+    "        sum += count_paths(j, i)\n",
+    "    print(sum)"
    ]
   }
  ],
