--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,29 +286,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "current : 0, c : 2, cnt : 2\n"
+     "ename": "ValueError",
+     "evalue": "min() arg is an empty sequence",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1389.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m count_paths(\u001b[39m1\u001b[39;49m, \u001b[39m4\u001b[39;49m)\n",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1389.ipynb Cell 11\u001b[0m in \u001b[0;36mcount_paths\u001b[1;34m(start, end)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X11sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m         cnt_list\u001b[39m.\u001b[39mappend(cnt)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X11sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m     \u001b[39m#print(f\"current : {current}, c : {c}, cnt : {cnt}\")\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X11sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m min_cnt \u001b[39m=\u001b[39m \u001b[39mmin\u001b[39;49m(cnt_list)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X11sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m \u001b[39mreturn\u001b[39;00m min_cnt\n",
+      "\u001b[1;31mValueError\u001b[0m: min() arg is an empty sequence"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "count_paths(0, 1)"
+    "count_paths(1, 4)"
    ]
   },
   {
