More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -234,22 +234,22 @@
    "source": [
     "def count_paths(start, end):\n",
     "    cnt = 0\n",
+    "    cnt_list = []\n",
     "    current = start\n",
     "    \n",
     "    if end  in relations_list[current]:\n",
     "        chk[current][end] = chk[end][current] = True\n",
     "        cnt += 1\n",
-    "        return cnt         \n",
-    "\n",
-    "    cnt_list = []    \n",
+    "        return cnt\n",
+    "            \n",
     "    for c in relations_list[current]:\n",
-    "        cnt = 0\n",
+    "        sub_cnt = 0\n",
     "        chk[current][c] = chk[c][current] = True\n",
-    "        cnt += 1        \n",
+    "        sub_cnt += 1        \n",
     "        \n",
     "        if end in relations_list[c]:\n",
     "            chk[c][end] = chk[end][c] = True\n",
-    "            cnt += 1\n",
+    "            sub_cnt += 1\n",
     "        else:\n",
     "            continue\n",
     "        \n",
