More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -264,6 +264,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_paths(start, end):\n",
+    "    cnt = 0\n",
+    "    cnt_list = []\n",
+    "    current = start\n",
+    "    \n",
+    "    if end  in relations_list[current]:\n",
+    "        chk[current][end] = chk[end][current] = True\n",
+    "        cnt += 1\n",
+    "        return cnt\n",
+    "            \n",
+    "    for c in relations_list[current]:\n",
+    "        sub_cnt = 0\n",
+    "        chk[current][c] = chk[c][current] = True\n",
+    "        sub_cnt += 1        \n",
+    "        \n",
+    "        if end in relations_list[c]:\n",
+    "            chk[c][end] = chk[end][c] = True\n",
+    "            sub_cnt += 1\n",
+    "        else:\n",
+    "            count = c\n",
+    "            count_paths(current, end)\n",
+    "            \n",
+    "        cnt = sub_cnt\n",
+    "        cnt_list.append(cnt)\n",
+    "        #print(f\"current : {current}, c : {c}, cnt : {cnt}\")\n",
+    "        \n",
+    "    min_cnt = min(cnt_list)\n",
+    "    return min_cnt\n",
+    "                                  "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [
