--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        " [False, False, False, False, False]]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        " [0, 0, 0, 1, 0]]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_paths(end, current=start, cnt=0):           \n",
+    "    if end  in relations_list[start]:\n",
+    "        chk[current][end] = chk[end][current] = True\n",
+    "        cnt = 1\n",
+    "        return cnt\n",
+    "            \n",
+    "    for c in relations_list[current]:\n",
+    "        sub_cnt = 0\n",
+    "        chk[current][c] = chk[c][current] = True\n",
+    "        sub_cnt += 1        \n",
+    "        \n",
+    "        if end in relations_list[c]:\n",
+    "            chk[c][end] = chk[end][c] = True\n",
+    "            sub_cnt += 1\n",
+    "        else:\n",
+    "            current = c\n",
+    "            count_paths(end, current, sub_cnt)       \n",
+    "        \n",
+    "        if chk[c][end]:\n",
+    "            cnt = min(sub_cnt, cnt)\n",
+    "            \n",
+    "        #print(f\"current : {current}, c : {c}, cnt : {cnt}\")\n",
+    "        \n",
+    "    return cnt\n",
+    "                                  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +284,8 @@
     "            chk[c][end] = chk[end][c] = True\n",
     "            sub_cnt += 1\n",
     "        else:\n",
-    "            continue\n",
+    "            current = c\n",
+    "            count_paths(current, end)\n",
     "        \n",
     "        if chk[c][end]:\n",
     "            cnt_list.append(cnt)\n",
@@ -264,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -323,19 +357,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "min() arg is an empty sequence",
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'current' referenced before assignment",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1389.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m count_paths(\u001b[39m1\u001b[39;49m, \u001b[39m4\u001b[39;49m)\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1389.ipynb Cell 11\u001b[0m in \u001b[0;36mcount_paths\u001b[1;34m(start, end)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X11sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m         cnt_list\u001b[39m.\u001b[39mappend(cnt)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X11sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m     \u001b[39m#print(f\"current : {current}, c : {c}, cnt : {cnt}\")\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X11sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m min_cnt \u001b[39m=\u001b[39m \u001b[39mmin\u001b[39;49m(cnt_list)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X11sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m \u001b[39mreturn\u001b[39;00m min_cnt\n",
-      "\u001b[1;31mValueError\u001b[0m: min() arg is an empty sequence"
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1389.ipynb Cell 13\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X14sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m count_paths(\u001b[39m1\u001b[39;49m, \u001b[39m4\u001b[39;49m)\n",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1389.ipynb Cell 13\u001b[0m in \u001b[0;36mcount_paths\u001b[1;34m(start, end, cnt)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X14sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     cnt \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X14sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m cnt\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X14sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mfor\u001b[39;00m c \u001b[39min\u001b[39;00m relations_list[current]:\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X14sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     sub_cnt \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X14sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     chk[current][c] \u001b[39m=\u001b[39m chk[c][current] \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'current' referenced before assignment"
      ]
     }
    ],
