--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        " [False, False, False, False, False]]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        " [0, 0, 0, 1, 0]]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -228,15 +228,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3]\n",
+      "[2]\n",
+      "[0, 3, 1]\n",
+      "[0, 4, 2]\n",
+      "[3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for l in relations_list:\n",
+    "    print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def count_paths(end, current=start, cnt=0):           \n",
+    "def count_paths(start=0, end=0,  cnt=0):           \n",
     "    if end  in relations_list[start]:\n",
-    "        chk[current][end] = chk[end][current] = True\n",
-    "        cnt = 1\n",
-    "        return cnt\n",
+    "        chk[start][end] = chk[end][start] = True\n",
+    "        cnt = 1   \n",
     "            \n",
     "    for c in relations_list[current]:\n",
     "        sub_cnt = 0\n",
@@ -248,7 +269,7 @@
     "            sub_cnt += 1\n",
     "        else:\n",
     "            current = c\n",
-    "            count_paths(end, current, sub_cnt)       \n",
+    "            count_paths(current, end, sub_cnt)       \n",
     "        \n",
     "        if chk[c][end]:\n",
     "            cnt = min(sub_cnt, cnt)\n",
@@ -257,6 +278,48 @@
     "        \n",
     "    return cnt\n",
     "                                  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "relations_list[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'current' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1389.ipynb Cell 12\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X22sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m count_paths(\u001b[39m0\u001b[39;49m, \u001b[39m2\u001b[39;49m, \u001b[39m0\u001b[39;49m)\n",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1389.ipynb Cell 12\u001b[0m in \u001b[0;36mcount_paths\u001b[1;34m(start, end, cnt)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X22sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcount_paths\u001b[39m(start\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, end\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m,  cnt\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m):           \n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X22sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39mif\u001b[39;00m end  \u001b[39min\u001b[39;00m relations_list[start]:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X22sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m         chk[current][end] \u001b[39m=\u001b[39m chk[end][current] \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X22sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m         cnt \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m   \n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X22sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mfor\u001b[39;00m c \u001b[39min\u001b[39;00m relations_list[current]:\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'current' referenced before assignment"
+     ]
+    }
+   ],
+   "source": [
+    "count_paths(0, 2, 0)"
    ]
   },
   {
@@ -357,24 +420,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'current' referenced before assignment",
+     "ename": "",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1389.ipynb Cell 13\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X14sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m count_paths(\u001b[39m1\u001b[39;49m, \u001b[39m4\u001b[39;49m)\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1389.ipynb Cell 13\u001b[0m in \u001b[0;36mcount_paths\u001b[1;34m(start, end, cnt)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X14sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     cnt \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X14sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m cnt\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X14sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mfor\u001b[39;00m c \u001b[39min\u001b[39;00m relations_list[current]:\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X14sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     sub_cnt \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X14sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     chk[current][c] \u001b[39m=\u001b[39m chk[c][current] \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n",
-      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'current' referenced before assignment"
+      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
    "source": [
-    "count_paths(1, 4)"
+    "count_paths(1, 4, 0)"
    ]
   },
   {
