--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_paths(start, end):\n",
+    "    \n",
+    "    cnt_list = []\n",
+    "    for c in relations_list[start]:\n",
+    "        if c == end and not chk[start][c] and not chk[c][start]:\n",
+    "            cnt = 1\n",
+    "            chk[start][c] = chk[c][start] = True\n",
+    "            print(f\"cnt : {cnt}     {start} ---> {end}\")\n",
+    "            cnt_list.append(cnt)\n",
+    "            \n",
+    "        cnt = 0\n",
+    "        cnt += 1\n",
+    "        if end in relations_list[c] and not chk[c][end] and not chk[end][c]:\n",
+    "            cnt += 1\n",
+    "            chk[end][c] = chk[c][end] = True\n",
+    "            print(f\"cnt : {cnt}     {start} ---> {c} ---> {end}\")\n",
+    "            cnt_list.append(cnt)\n",
+    "        elif end not in relations_list[c] and not chk[start][c] and not chk[c][start]:\n",
+    "            cnt += 1\n",
+    "            chk[c][end] = chk[end][c] = True\n",
+    "            #print(f\"row = {c}:  {end} is not in {relations_list[c]}:  cnt : {cnt}\")\n",
+    "            \n",
+    "            for cc in relations_list[c]:\n",
+    "                sub_cnt = 0\n",
+    "                if end in relations_list[cc]:  # and not chk[cc][end] and not chk[end][cc]을 생략! count_paths(0, 1)을 비교해봐라.\n",
+    "                    sub_cnt += 1\n",
+    "                    chk[end][cc] = chk[cc][end] = True                               \n",
+    "                    print(f\"cnt : {cnt + sub_cnt}     {start} ---> {c} ----> {cc} ---> {end}\")\n",
+    "                    cnt_list.append(cnt + sub_cnt)\n",
+    "                else:\n",
+    "                    sub_cnt += 1\n",
+    "                    for ccc in relations_list[cc]:\n",
+    "                        if end in relations_list[ccc]:\n",
+    "                            sub_cnt += 1\n",
+    "                            print(f\"cnt : {cnt + sub_cnt}     {start} ---> {c} ----> {cc} ---> {ccc} ---> {end}\")\n",
+    "\n",
+    "    print(f\"cnt_list : {cnt_list},   min_cnt : {min(cnt_list)}\")               \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -502,6 +547,26 @@
       "cnt : 5     0 ---> 3 ----> 2 ---> 3 ---> 2\n",
       "cnt : 6     0 ---> 3 ----> 2 ---> 1 ---> 2\n",
       "cnt_list : [1, 3, 3, 3, 3],   min_cnt : 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "chk = [[False] * N for _ in range(N)]\n",
+    "count_paths(0, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cnt : 1     0 ---> 2\n",
+      "cnt : 2     0 ---> 3 ---> 2\n",
+      "cnt_list : [1, 2],   min_cnt : 1\n"
      ]
     }
    ],
