More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,6 +481,7 @@
     "        cnt += 1\n",
     "        if end in relations_list[c] and not chk[c][end] and not chk[end][c]:\n",
     "            cnt += 1\n",
+    "            chk[start][c] = chk[c][start] = True\n",
     "            chk[end][c] = chk[c][end] = True\n",
     "            print(f\"cnt : {cnt}     {start} ---> {c} ---> {end}\")\n",
     "            cnt_list.append(cnt)\n",
@@ -557,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -577,20 +578,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[[False, False, True, False, False],\n",
-       " [False, False, True, False, False],\n",
-       " [True, True, False, True, False],\n",
+       " [False, False, False, False, False],\n",
+       " [True, False, False, True, False],\n",
        " [False, False, True, False, False],\n",
        " [False, False, False, False, False]]"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,10 +602,205 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cnt : 4     2 ---> 0 ----> 2 ---> 3 ---> 4\n",
+      "cnt : 3     2 ---> 0 ----> 3 ---> 4\n",
+      "cnt : 4     2 ---> 1 ----> 2 ---> 3 ---> 4\n",
+      "cnt_list : [3],   min_cnt : 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "chk = [[False] * N for _ in range(N)]\n",
+    "count_paths(2, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 row : [2, 3]\n",
+      "1 row : [2]\n",
+      "2 row : [0, 3, 1]\n",
+      "3 row : [0, 4, 2]\n",
+      "4 row : [3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(relations_list)):\n",
+    "    print(f\"{i} row : {relations_list[i]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_paths(start, end):\n",
+    "    \n",
+    "    cnt_list = []\n",
+    "    for c in relations_list[start]:\n",
+    "        if c == end :\n",
+    "            cnt = 1\n",
+    "            \n",
+    "            print(f\"cnt : {cnt}     {start} ---> {end}\")\n",
+    "            cnt_list.append(cnt)\n",
+    "            \n",
+    "        cnt = 0\n",
+    "        cnt += 1\n",
+    "        if end in relations_list[c] :\n",
+    "            cnt += 1\n",
+    "            \n",
+    "            print(f\"cnt : {cnt}     {start} ---> {c} ---> {end}\")\n",
+    "            cnt_list.append(cnt)\n",
+    "        else:\n",
+    "            cnt += 1\n",
+    "            #print(f\"row = {c}:  {end} is not in {relations_list[c]}:  cnt : {cnt}\")\n",
+    "            \n",
+    "            for cc in relations_list[c]:\n",
+    "                sub_cnt = 0\n",
+    "                if end in relations_list[cc]:  # and not chk[cc][end] and not chk[end][cc]을 생략! count_paths(0, 1)을 비교해봐라.\n",
+    "                    sub_cnt += 1\n",
+    "                                                 \n",
+    "                    print(f\"cnt : {cnt + sub_cnt}     {start} ---> {c} ----> {cc} ---> {end}\")\n",
+    "                    cnt_list.append(cnt + sub_cnt)\n",
+    "                else:\n",
+    "                    sub_cnt += 1\n",
+    "                    for ccc in relations_list[cc]:\n",
+    "                        if end in relations_list[ccc]:\n",
+    "                            sub_cnt += 1\n",
+    "                            print(f\"cnt : {cnt + sub_cnt}     {start} ---> {c} ----> {cc} ---> {ccc} ---> {end}\")\n",
+    "\n",
+    "    print(f\"cnt_list : {cnt_list},   min_cnt : {min(cnt_list)}\")               \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cnt : 4     2 ---> 0 ----> 2 ---> 3 ---> 4\n",
+      "cnt : 3     2 ---> 0 ----> 3 ---> 4\n",
+      "cnt : 2     2 ---> 3 ---> 4\n",
+      "cnt : 4     2 ---> 1 ----> 2 ---> 3 ---> 4\n",
+      "cnt_list : [3, 2],   min_cnt : 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "chk = [[False] * N for _ in range(N)]\n",
+    "count_paths(2, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cnt : 1     0 ---> 2\n",
+      "cnt : 3     0 ---> 2 ----> 0 ---> 2\n",
+      "cnt : 3     0 ---> 2 ----> 3 ---> 2\n",
+      "cnt : 3     0 ---> 2 ----> 1 ---> 2\n",
+      "cnt : 2     0 ---> 3 ---> 2\n",
+      "cnt_list : [1, 3, 3, 3, 2],   min_cnt : 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "chk = [[False] * N for _ in range(N)]\n",
+    "count_paths(0, 2)"
+   ]
   }
  ],
  "metadata": {
